# savitzky_golay_filter

./: CMakeLists.txt  README.md  setup.py  tst.py
savitzky_golay.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: main.cpp
